# python-evdev

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  file.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: install.yaml  lint.yml  test.yml
debian/: LICENCE  control  rules
doc/: Makefile  apidoc.rst  changelog.rst  conf.py  index.rst  install.rst  moduledoc.rst  news.rst  tutorial.rst
docs/: Makefile  apidoc.rst  changelog.rst  conf.py  index.rst  install.rst  installation.rst  scope.rst  tutorial.rst  usage.rst
evdev/: __init__.py  device.py  ecodes.py  ecodes.sh  ecodes_runtime.py  eventio.py  eventio_async.py  events.py  evtest.py  ff.py  genecodes.py  genecodes_c.py  genecodes_py.py  geniprops.py  genpyi.py  input.c  uinput.c  uinput.py  util.h  util.py
examples/: udev-example.py
packaging/: python-evdev.spec
scripts/: build-binary.sh  cibw-before.sh
src/evdev/: __init__.py  device.py  ecodes.py  eventio.py  evtest.py  genecodes_c.py  genecodes_py.py  input.c  uinput.py  util.py
tests/: test_ecodes.py  test_events.py  test_uinput.py  test_util.py
